<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:orientation="vertical"
    android:id="@+id/mainView"
    android:background="@color/bgColor">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imgMain"
        android:src="@drawable/baymax"
        android:contentDescription="@string/desc"
        android:layout_gravity="center"
        android:layout_above="@+id/btnMainView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnMainAdd"
        android:id="@+id/btnMainAdd"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="92dp"
        android:onClick="addActivity"
        android:background="@color/bgBtn"
        android:textColor="@color/fontColor"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnMainView"
        android:id="@+id/btnMainView"
        android:layout_above="@+id/btnMainAdd"
        android:onClick="viewActivity"
        android:background="@color/bgBtn"
        android:textColor="@color/fontColor"
        />

</RelativeLayout>
